Changing phone number in all pages

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			
 			<div class="title">
 				<p id="mountvernon">Mount Vernon PC</p>
-				<p id="phone">(703)-485-5729 </p>
+				<p id="phone">((555)-555-5555 </p>
 				<p id="email"> <a href="mailto:kyle@mountvernonpc.com">kyle@mountvernonpc.com</a></p>
 			</div>	
 			
@@ -70,7 +70,7 @@
 				<li> I'm a 4th year UVA student pursuing a <span id="boldredwords">Computer Science B.S.</span>
 				and have been building and repairing computers for the past 7 years. </li>
 
-				<li> The fastest way to get in touch with me is to text/call my cell: <span id="boldredwords">(703) 485-5729</span> .</li>
+				<li> The fastest way to get in touch with me is to text/call my cell: <span id="boldredwords">(555)-555-5555</span> .</li>
 			
 				<li> Guaranteed <span id="boldredwords">lowest rate</span> in the area. I will price match any competitor.</li>
 				<li> If you have a quick question like how to change specific 
@@ -124,7 +124,7 @@
 		</div>
 		<div class="grid_12">
 			<h1>&copy; Mount Vernon PC LLC 2014</h1>
-			<h2>(703) 485-5729<h2>
+			<h2>((555)-555-5555<h2>
 			<h2><a href="mailto:kyle@mountvernonpc.com">kyle@mountvernonpc.com</a></h2>
 		</div>
 	</div>
